--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
             </form>
         </section>
 
+        <h1>Teste</h1>
+
         <!-- Formulário de Registro (Inicia Oculto) -->
         <section id="register-form" style="display: none;">
             <h2>Registrar-se</h2>
